--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "clipboard": "^2.0.11",
     "pinia": "^2.1.7",
+    "qrcode": "^1.5.3",
     "vant": "^4.8.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
@@ -22,6 +24,7 @@
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
     "@types/postcss-pxtorem": "^6.0.3",
+    "@types/qrcode": "^1.5.5",
     "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/tsconfig": "^0.5.1",
