--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "qrcode": "^1.5.3",
     "vant": "^4.8.5",
     "vue": "^3.4.15",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^4.2.5",
     "web3": "^4.5.0"
   },
