--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "dependencies": {
     "axios": "^1.6.7",
     "clipboard": "^2.0.11",
+    "events": "^3.3.0",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.3",
     "vant": "^4.8.5",
     "vue": "^3.4.15",
     "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^4.2.5",
-    "web3": "^4.5.0"
+    "web3": "^4.5.0",
+    "web3-utils": "^1.10.4"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.2",
@@ -33,6 +35,7 @@
     "npm-run-all2": "^6.1.1",
     "postcss-pxtorem": "^6.1.0",
     "sass": "^1.71.1",
+    "terser": "^5.29.1",
     "typescript": "~5.3.0",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
